# nix-sandbox-mcp

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  config.example.toml  flake.nix  test-local.sh
agent/: default.nix  sandbox_agent.py
daemon/: Cargo.toml
daemon/src/: backend.rs  config.rs  lib.rs  main.rs  mcp.rs  session.rs
daemon/src/backend/: jail.rs
daemon/src/transport/: mod.rs  protocol.rs  stdio_pipe.rs
nix/backends/: default.nix  jail.nix
nix/environments/: default.nix  node.nix  python.nix  shell.nix
nix/lib/: default.nix  fromToml.nix  mkSandbox.nix
nix/tests/: default.nix
test-envs/: flake.nix
thoughts/shared/: testing-guide.md  ux-evaluation-2026-02-02.md
thoughts/shared/handoffs/general/: 2026-02-03_16-25-28_phase2a-implementation.md
thoughts/shared/plans/: 2026-02-01-phase1-mvp-nix-layer.md  2026-02-02-phase2a-run-tool-and-project-context.md  2026-02-02-phase2b-sessions-spike.md  2026-02-03-phase2c-decoupled-sandboxes.md
thoughts/shared/research/: 2026-02-01-nix-sandbox-mcp-architecture.md
