[package]
name = "nix-sandbox-mcp-daemon"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "MCP server for Nix-based sandboxed code execution"
license = "MIT"

[[bin]]
name = "nix-sandbox-mcp-daemon"
path = "src/main.rs"

[dependencies]
# MCP protocol
rmcp = { version = "0.14", features = ["server", "transport-io", "macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
